--- a/src/app/Navbar/navbar.component.html
+++ b/src/app/Navbar/navbar.component.html
@@ -1,2 +1,39 @@
 
-<h1 class="testNav">{{title}}</h1>
+<!-- <h1 class="testNav">{{title}}</h1> -->
+
+<header id="mu-header">
+  <nav class="navbar navbar-default mu-main-navbar" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <!-- LOGO -->
+
+         <!--  Text based logo  -->
+        <a class="navbar-brand" href="index.html">Osteria<span>X</span></a>
+
+        <!--  Image based logo  -->
+        <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="Logo img"></a>  -->
+
+
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="#mu-about-us">ABOUT US</a></li>
+          <li><a href="#mu-restaurant-menu">MENU</a></li>
+          <li><a href="#mu-reservation">RESERVATION</a></li>
+          <li><a href="#mu-gallery">GALLERY</a></li>
+          <li><a href="#mu-chef">OUR CHEFS</a></li>
+          <li><a href="#mu-contact">CONTACT</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+</header>
