--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,8 @@
 
 <app-reservation></app-reservation>
 
-<app-gallery></app-gallery> 
+<app-gallery></app-gallery>
+
+<app-testimonials></app-testimonials>
+
+
