--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <app-slider></app-slider>
-
+<!--
 <app-about></app-about>
 
 <app-counter></app-counter>
@@ -20,4 +20,4 @@
 
 <app-map></app-map>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
