Menu Component Encapsulation

--- a/src/app/Menu/menu.component.html
+++ b/src/app/Menu/menu.component.html
@@ -28,32 +28,10 @@
                       <div class="mu-tab-content-left">
                         <ul class="mu-menu-item-nav">
                           <li>
-                            <div class="media">
-                              <div class="media-left">
-                                <a href="#">
-                                  <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
-                                </a>
-                              </div>
-                              <div class="media-body">
-                                <h4 class="media-heading"><a href="#">English Breakfast</a></h4>
-                                <span class="mu-menu-price">$15.85</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
-                              </div>
-                            </div>
+                            <app-menu-item [item] = "dish"></app-menu-item>
                           </li>
                            <li>
-                            <div class="media">
-                              <div class="media-left">
-                                <a href="#">
-                                  <img class="media-object" src="assets/img/menu/item-2.jpg" alt="img">
-                                </a>
-                              </div>
-                              <div class="media-body">
-                                <h4 class="media-heading"><a href="#">Chines Breakfast</a></h4>
-                                <span class="mu-menu-price">$11.95</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
-                              </div>
-                            </div>
+                            <app-menu-item [item] = "dish2"></app-menu-item>
                           </li>
                            <li>
                             <div class="media">
