--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <app-navbar></app-navbar>
 
 <app-slider></app-slider>
-<!--
+
 <app-about></app-about>
 
 <app-counter></app-counter>
--->
+
 <app-menu> </app-menu>
-<!--
+
 <app-reservation></app-reservation>
 
 <app-gallery></app-gallery>
@@ -20,4 +20,5 @@
 
 <app-map></app-map>
 
-<app-footer></app-footer> -->
+<app-footer></app-footer>
+
