--- a/src/app/Reservation/reservation.component.html
+++ b/src/app/Reservation/reservation.component.html
@@ -58,7 +58,7 @@
                         <textarea class="form-control" cols="30" rows="10" placeholder="Your Message"></textarea>
                       </div>
                     </div>
-                    <button type="submit" class="mu-readmore-btn">Make Reservation</button>
+                    <input type='button'  class="mu-readmore-btn" value = 'Make Reservation' (click) = "submitReservation()"/>
                   </div>
                 </form>
               </div>
