installazione package jquery

--- a/src/app/Menu/menu.component.html
+++ b/src/app/Menu/menu.component.html
@@ -12,7 +12,7 @@
           <div class="mu-restaurant-menu-content">
             <ul class="nav nav-tabs mu-restaurant-menu">
               <!-- <li class="active"><a  (click)="selectType( 'Breakfast' )">Breakfast</a></li> -->
-              <li><a  (click)="selectType( 'Breakfast' )">Breakfast</a></li>
+              <li  class="active"><a  (click)="selectType( 'Breakfast' )">Breakfast</a></li>
               <li><a  (click)="selectType( 'Meals')">Meals</a></li>
               <li><a (click)="selectType('Snacks') ">Snacks</a></li>
               <li><a (click)="selectType('Desserts')">Desserts</a></li>
