--- a/src/app/Menu/menu-item/menu-item.component.html
+++ b/src/app/Menu/menu-item/menu-item.component.html
@@ -1,12 +1,12 @@
 <li>
 <div class="media">
   <div class="media-left">
-    <a href="#">
+    <a>
       <img class="media-object" [src]="item.imagePath" alt="img">
     </a>
   </div>
   <div class="media-body">
-  <h4 class="media-heading"><a href="#">{{item.name}}</a></h4>
+  <h4 class="media-heading"><a>{{item.name}}</a></h4>
     <span class="mu-menu-price">${{item.amount}}</span>
   <p>{{item.description}}</p>
   </div>
