Collegamento librerie npm e aggiunta menu poupu

--- a/src/app/Menu/menu-item/menu-item.component.html
+++ b/src/app/Menu/menu-item/menu-item.component.html
@@ -1,7 +1,7 @@
 <li>
 <div class="media">
   <div class="media-left">
-    <a>
+    <a [href]="'#'+item.guid" class="open-popup-link">
       <img class="media-object" [src]="item.imagePath" alt="img">
     </a>
   </div>
@@ -11,4 +11,19 @@
   <p>{{item.description}}</p>
   </div>
 </div>
+<div [id]="item.guid" class="white-popup mfp-hide">
+  <div class="media">
+    <div class="media-left">
+      <a>
+        <img class="media-object" [src]="item.imagePath" alt="img">
+      </a>
+    </div>
+    <div class="media-body">
+    <h4 class="media-heading"><a>{{item.name}}</a></h4>
+      <span class="mu-menu-price">${{item.amount}}</span>
+    <p>{{item.description}}</p>
+    </div>
+  </div>
+</div>
+<!-- <a >Show inline popup</a> -->
 </li>
