--- a/src/app/Menu/menu.component.css
+++ b/src/app/Menu/menu.component.css
@@ -73,7 +73,7 @@
 .mu-tab-content-right {
   display: inline;
   float: left;
-  padding-left: 15px;
+  /* padding-left: 15px; */
   width: 100%;
 }
 
