--- a/src/app/Counter/counter.component.css
+++ b/src/app/Counter/counter.component.css
@@ -1,7 +1,7 @@
 
 #mu-counter {
   background-attachment: fixed;
-  background-image: url("assets/img/counter-bg.jpeg");
+  background-image: url("src/assets/img/counter-bg.jpeg");
   background-size: cover;
   display: inline;
   float: left;
