--- a/src/app/Menu/menu-panel/menu-panel.component.html
+++ b/src/app/Menu/menu-panel/menu-panel.component.html
@@ -18,6 +18,17 @@
        </div>
      </div>
 
+     <div class="col-md-6">
+      <div class="mu-tab-content-right">
+         <ul class="mu-menu-item-nav">
+          <app-menu-item [item] = "newDish" data-toggle="modal" data-target="#exampleModal"></app-menu-item>
+          <app-menu-edit-item></app-menu-edit-item>
+        </ul>
+      </div>
+    </div>
+
+
+
    </div>
  </div>
 </div>
