--- a/src/app/Menu/menu.component.html
+++ b/src/app/Menu/menu.component.html
@@ -12,11 +12,11 @@
           <div class="mu-restaurant-menu-content">
             <ul class="nav nav-tabs mu-restaurant-menu">
               <!-- <li class="active"><a  (click)="selectType( 'Breakfast' )">Breakfast</a></li> -->
-              <li  class="active"><a routerLinkActive='active' [routerLink] = "['/menu','Breakfast']">Breakfast</a></li>
-              <li><a  [routerLink] = "['/menu','Meals']">Meals</a></li>
-              <li><a [routerLink] = "['/menu','Snacks']">Snacks</a></li>
-              <li><a [routerLink] = "['/menu','Desserts']">Desserts</a></li>
-              <li><a [routerLink] = "['/menu','Drinks']">Drinks</a></li>
+              <li  class="active"><a routerLinkActive='active' [routerLink] = "['/','Breakfast']">Breakfast</a></li>
+              <li><a  [routerLink] = "['/','Meals']">Meals</a></li>
+              <li><a [routerLink] = "['/','Snacks']">Snacks</a></li>
+              <li><a [routerLink] = "['/','Desserts']">Desserts</a></li>
+              <li><a [routerLink] = "['/','Drinks']">Drinks</a></li>
             </ul>
 
             <!-- Tab panes -->
