--- a/src/app/Menu/menu-item/menu-item.component.html
+++ b/src/app/Menu/menu-item/menu-item.component.html
@@ -3,7 +3,7 @@
   <div class="media-left">
     <!-- <a [href]="'#'+item.guid" class="open-popup-link"> -->
     <a>
-      <img class="media-object" [src]="item.imagePath" alt="img">
+      <img class="media-object" [src]="item.imgPath" alt="img">
     </a>
   </div>
   <div class="media-body">
@@ -16,7 +16,7 @@
   <div class="media">
     <div class="media-left">
       <a>
-        <img class="media-object" [src]="item.imagePath" alt="img">
+        <img class="media-object" [src]="item.imgPath" alt="img">
       </a>
     </div>
   </div>
